[Docs] 아키텍처 문서 전체 최신화 (#149)
* [Docs] 아키텍처 문서 전체 최신화 및 포트폴리오 관점 재구성

- multi-module-structure: apps:admin, batch:sync 모듈 추가 반영, 기술 스택(Java 25, Spring Boot 3.5.9) 명시, 배포 아키텍처/CI/CD 다이어그램 추가, 설계 판단 근거와 DIP 실전 사례 서술
- recommendation-system: 설계 의도("왜 직접 구현했는가") 추가, 컴포넌트 다이어그램 추가, 추천 근거 텍스트(reasonText) 섹션 추가, 점수 모델별 설계 의도 보강
- restaurant-sync-spring-batch-migration: 전환 판단 근거 테이블 추가, 포맷 개선
- operations 문서: 최종 업데이트 날짜 추가, runbook 마크다운 구문 오류 수정

https://claude.ai/code/session_012cqCDtMrqoUGhxtRo1PkmM

* [Refactor] 추천 시스템 정책 주입화, 배치 안정성 강화, 크로스모듈 의존성 정리

B. 추천 시스템 리팩토링:
- RecommendationScoringPolicy를 @ConfigurationProperties로 변경하여 Spring Bean 주입 가능
- AI 요약 키워드(그룹/긍정/부정)를 정책 객체로 분리하여 설정 오버라이드 가능
- DistanceRange 거리 임계값 하드코딩 제거, enum 필드 값 활용

C. 배치/동기화 안정성 강화:
- SyncWorkerConfig에 graceful shutdown (awaitTermination 30초) 추가
- RestaurantSyncJobWorker에 청크 레벨 재시도 로직 추가 (최대 2회, 지수 백오프)

D. 크로스모듈 의존성 정리:
- KakaoAdminClientProperties를 apps:domain에서 external:kakao로 이동

https://claude.ai/code/session_012cqCDtMrqoUGhxtRo1PkmM

* [Refactor] Virtual Thread 설정 정리: AsyncConfig 중복 executor 제거, SyncWorkerConfig 가상 스레드 전환

- AsyncConfig: spring.threads.virtual.enabled=true로 자동 적용되므로 getAsyncExecutor() 제거, 예외 핸들러만 유지
- SyncWorkerConfig: FixedThreadPool → Virtual Thread executor 전환, DisposableBean 기반 graceful shutdown
- 아키텍처 문서에 Virtual Thread 동시성 전략 반영

https://claude.ai/code/session_012cqCDtMrqoUGhxtRo1PkmM

* [Refactor] Virtual Thread 병렬 처리 적용: 맛집 수집 병렬화 및 불필요한 CompletableFuture 제거

- RestaurantCollectionProcessor: 순차 처리(항목당 5s sleep) → Virtual Thread + Semaphore(3 permits) 병렬 처리
  - collectAllRegions: 배치 그룹핑/15s sleep 제거, 전체 entry 동시 실행
  - processRestaurantsForLocation: 각 suggestion을 virtual thread로 병렬 처리
  - processSingleSuggestion 메서드 추출로 관심사 분리
- ValidationContext: HashSet → ConcurrentHashMap.newKeySet()으로 스레드 안전성 확보
- KakaoAdminKakaoApiExecutor: executeWithTimeout 제거
  - CompletableFuture.supplyAsync().join() 패턴 제거 (플랫폼 스레드 불필요 사용)
  - RestClientResponseException 처리를 executeWithSemaphore